--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Femboy Style</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
 
+        header {
+            background-color: #ffcccb;
+            padding: 1em;
+            text-align: center;
+            font-size: 1.5em;
+        }
+
+        main {
+            padding: 2em;
+        }
+
+        section {
+            margin-bottom: 1.5em;
+        }
+
+        h2 {
+            color: #ff69b4;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        footer {
+            background-color: #ffcccb;
+            padding: 1em;
+            text-align: center;
+            font-size: 0.9em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Charcoal's Crabdance Website</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Very sigma!!!!</h2>
+            <p>hallo</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 charcoal.crabdnace.com</p>
+    </footer>
+</body>
+</html>
